{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 746,
  "lineage": "22b07eb0-8a1e-a158-beae-d5b8764ba7ad",
  "resources": [
    {
      "module": "module.ALB",
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:339712788790:loadbalancer/app/MREN-app-alb/4546fd05ed60ddbb",
            "arn_suffix": "app/MREN-app-alb/4546fd05ed60ddbb",
            "desync_mitigation_mode": "defensive",
            "dns_name": "MREN-app-alb-1591146810.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:339712788790:loadbalancer/app/MREN-app-alb/4546fd05ed60ddbb",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "MREN-app-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-047ff7afa3209d5b1"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04e23b51e3f099ef8"
              },
              {
                "subnet_id": "subnet-08c05f46babdbcb5f"
              }
            ],
            "subnets": [
              "subnet-04e23b51e3f099ef8",
              "subnet-08c05f46babdbcb5f"
            ],
            "tags": {
              "Name": "MREN-app-alb"
            },
            "tags_all": {
              "Name": "MREN-app-alb"
            },
            "vpc_id": "vpc-0292d1de4d641b202",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "module.security-group.aws_security_group.ec2_public_sg",
            "module.vpc.aws_subnet.pub_sub_1a",
            "module.vpc.aws_subnet.pub_sub_1b",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.ALB",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:339712788790:listener/app/MREN-app-alb/4546fd05ed60ddbb/f9e19ee98445ed27",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:339712788790:targetgroup/MREN-app-alb-tg/dd1d8a3ca813e99c",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:339712788790:listener/app/MREN-app-alb/4546fd05ed60ddbb/f9e19ee98445ed27",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:339712788790:loadbalancer/app/MREN-app-alb/4546fd05ed60ddbb",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ALB.aws_lb.alb",
            "module.ALB.aws_lb_target_group.alb_tg",
            "module.security-group.aws_security_group.ec2_public_sg",
            "module.vpc.aws_subnet.pub_sub_1a",
            "module.vpc.aws_subnet.pub_sub_1b",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.ALB",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:339712788790:targetgroup/MREN-app-alb-tg/dd1d8a3ca813e99c",
            "arn_suffix": "targetgroup/MREN-app-alb-tg/dd1d8a3ca813e99c",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 300,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 60,
                "unhealthy_threshold": 5
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:339712788790:targetgroup/MREN-app-alb-tg/dd1d8a3ca813e99c",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "MREN-app-alb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0292d1de4d641b202"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Nat_Gateway",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip-nat-gateway-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0912e1fdd8b3f5ffe",
            "domain": "vpc",
            "id": "eipalloc-0912e1fdd8b3f5ffe",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-15-207-40-54.ap-south-1.compute.amazonaws.com",
            "public_ip": "15.207.40.54",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eip-nat-gateway-1a"
            },
            "tags_all": {
              "Name": "eip-nat-gateway-1a"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.Nat_Gateway",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip-nat-gateway-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-060630e3f8f3e8d12",
            "domain": "vpc",
            "id": "eipalloc-060630e3f8f3e8d12",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-52-66-120-41.ap-south-1.compute.amazonaws.com",
            "public_ip": "52.66.120.41",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eip-nat-gateway-1b"
            },
            "tags_all": {
              "Name": "eip-nat-gateway-1b"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.Nat_Gateway",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-gateway-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0912e1fdd8b3f5ffe",
            "association_id": "eipassoc-01ac97b61ff64020c",
            "connectivity_type": "public",
            "id": "nat-04764b5fd03bc131f",
            "network_interface_id": "eni-08cca7e5bf00e13d8",
            "private_ip": "10.0.101.119",
            "public_ip": "15.207.40.54",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-08c05f46babdbcb5f",
            "tags": {
              "Name": "nat-gateway-1a"
            },
            "tags_all": {
              "Name": "nat-gateway-1a"
            }
          },
          "dependencies": [
            "module.Nat_Gateway.aws_eip.eip-nat-gateway-1a",
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_subnet.pub_sub_1a",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.Nat_Gateway",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-gateway-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-060630e3f8f3e8d12",
            "association_id": "eipassoc-0411e211dce0af2ac",
            "connectivity_type": "public",
            "id": "nat-06d90c7bb8c6149e2",
            "network_interface_id": "eni-0ebd12359de6471c8",
            "private_ip": "10.0.102.210",
            "public_ip": "52.66.120.41",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-04e23b51e3f099ef8",
            "tags": {
              "Name": "nat-gateway-1b"
            },
            "tags_all": {
              "Name": "nat-gateway-1b"
            }
          },
          "dependencies": [
            "module.Nat_Gateway.aws_eip.eip-nat-gateway-1b",
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_subnet.pub_sub_1b",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.Nat_Gateway",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_RT_Natg1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:339712788790:route-table/rtb-0d337596fa27c90b7",
            "id": "rtb-0d337596fa27c90b7",
            "owner_id": "339712788790",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-04764b5fd03bc131f",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private_RT_Natg1a"
            },
            "tags_all": {
              "Name": "private_RT_Natg1a"
            },
            "timeouts": null,
            "vpc_id": "vpc-0292d1de4d641b202"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Nat_Gateway.aws_eip.eip-nat-gateway-1a",
            "module.Nat_Gateway.aws_nat_gateway.nat-gateway-1a",
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_subnet.pub_sub_1a",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.Nat_Gateway",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_RT_Natg1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:339712788790:route-table/rtb-0245e02c6ad7fbc9d",
            "id": "rtb-0245e02c6ad7fbc9d",
            "owner_id": "339712788790",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-06d90c7bb8c6149e2",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private_RT_Natg1b"
            },
            "tags_all": {
              "Name": "private_RT_Natg1b"
            },
            "timeouts": null,
            "vpc_id": "vpc-0292d1de4d641b202"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Nat_Gateway.aws_eip.eip-nat-gateway-1b",
            "module.Nat_Gateway.aws_nat_gateway.nat-gateway-1b",
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_subnet.pub_sub_1b",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.Nat_Gateway",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pri_sub_1st_with_private_RT_Natg1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00c378ff339b5154e",
            "route_table_id": "rtb-0d337596fa27c90b7",
            "subnet_id": "subnet-07d3fc594e56bc7fb"
          },
          "dependencies": [
            "module.Nat_Gateway.aws_eip.eip-nat-gateway-1a",
            "module.Nat_Gateway.aws_nat_gateway.nat-gateway-1a",
            "module.Nat_Gateway.aws_route_table.private_RT_Natg1a",
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_subnet.pri_sub_1st",
            "module.vpc.aws_subnet.pub_sub_1a",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.Nat_Gateway",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pri_sub_2nd_with_private_RT_Natg1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c4d9ffed5ae1ab8f",
            "route_table_id": "rtb-0245e02c6ad7fbc9d",
            "subnet_id": "subnet-036dd5f376595b3ab"
          },
          "dependencies": [
            "module.Nat_Gateway.aws_eip.eip-nat-gateway-1b",
            "module.Nat_Gateway.aws_nat_gateway.nat-gateway-1b",
            "module.Nat_Gateway.aws_route_table.private_RT_Natg1b",
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_subnet.pri_sub_2nd",
            "module.vpc.aws_subnet.pub_sub_1b",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instance_in_private_subnet",
      "mode": "managed",
      "type": "aws_instance",
      "name": "Ansible-masternode",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03f4878755434977f",
            "arn": "arn:aws:ec2:ap-south-1:339712788790:instance/i-054a45b78853b6cc5",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-054a45b78853b6cc5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "test-st",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-08ca629bc775cc5e1",
            "private_dns": "ip-10-0-101-6.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.101.6",
            "public_dns": "ec2-13-201-47-65.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.201.47.65",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0319c32e7aeb9f738",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08c05f46babdbcb5f",
            "tags": {
              "Name": "MREN-app-ansible-mn"
            },
            "tags_all": {
              "Name": "MREN-app-ansible-mn"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-047ff7afa3209d5b1"
            ]
          },
          "dependencies": [
            "module.security-group.aws_security_group.ec2_public_sg",
            "module.vpc.aws_subnet.pub_sub_1a",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instance_in_private_subnet",
      "mode": "managed",
      "type": "aws_instance",
      "name": "webserver1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03f4878755434977f",
            "arn": "arn:aws:ec2:ap-south-1:339712788790:instance/i-0ec7b5c19c9cf2b6a",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ec7b5c19c9cf2b6a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "test-st",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0cca101797cd4da96",
            "private_dns": "ip-10-0-1-192.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.192",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0947864a3e394a597",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07d3fc594e56bc7fb",
            "tags": {
              "Name": "MREN-app-EC2-AZ1"
            },
            "tags_all": {
              "Name": "MREN-app-EC2-AZ1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0aca714fa9fbbd5e9"
            ]
          },
          "dependencies": [
            "module.security-group.aws_security_group.ec2_private_sg",
            "module.vpc.aws_subnet.pri_sub_1st",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instance_in_private_subnet",
      "mode": "managed",
      "type": "aws_instance",
      "name": "webserver2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03f4878755434977f",
            "arn": "arn:aws:ec2:ap-south-1:339712788790:instance/i-02c105862519f8e37",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02c105862519f8e37",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "test-st",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06ff38f96f789677e",
            "private_dns": "ip-10-0-2-122.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.122",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d7dc268f24b56cf7",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-036dd5f376595b3ab",
            "tags": {
              "Name": "MREN-app-EC2-AZ2"
            },
            "tags_all": {
              "Name": "MREN-app-EC2-AZ2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0aca714fa9fbbd5e9"
            ]
          },
          "dependencies": [
            "module.security-group.aws_security_group.ec2_private_sg",
            "module.vpc.aws_subnet.pri_sub_2nd",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.security-group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_private_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:339712788790:security-group/sg-0aca714fa9fbbd5e9",
            "description": "enable ssh/22  as this sg will be used to assign private subnet \u0026 also allow 3306 to install mysql DB in this private subnet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0aca714fa9fbbd5e9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "mysql access",
                "from_port": 3001,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3001
              }
            ],
            "name": "security group2",
            "name_prefix": "",
            "owner_id": "339712788790",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "MREN-app-ec2_private_sg"
            },
            "tags_all": {
              "Name": "MREN-app-ec2_private_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0292d1de4d641b202"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security-group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_public_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:339712788790:security-group/sg-047ff7afa3209d5b1",
            "description": "enable http/https access on port 80/443",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-047ff7afa3209d5b1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http access",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "https access",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "https access",
                "from_port": 3001,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3001
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "https access",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "security group1",
            "name_prefix": "",
            "owner_id": "339712788790",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "MREN-app-ec2_public_sg"
            },
            "tags_all": {
              "Name": "MREN-app-ec2_public_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0292d1de4d641b202"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:339712788790:internet-gateway/igw-05e3f4b4e298fdcab",
            "id": "igw-05e3f4b4e298fdcab",
            "owner_id": "339712788790",
            "tags": {
              "Name": "MREN-app-igw"
            },
            "tags_all": {
              "Name": "MREN-app-igw"
            },
            "vpc_id": "vpc-0292d1de4d641b202"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:339712788790:route-table/rtb-04ce4808642056248",
            "id": "rtb-04ce4808642056248",
            "owner_id": "339712788790",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05e3f4b4e298fdcab",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "MREN-app-public-RT"
            },
            "tags_all": {
              "Name": "MREN-app-public-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0292d1de4d641b202"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub_sub_1a_with_public-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b03604aa69aa4aa6",
            "route_table_id": "rtb-04ce4808642056248",
            "subnet_id": "subnet-08c05f46babdbcb5f"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_route_table.public-RT",
            "module.vpc.aws_subnet.pub_sub_1a",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub_sub_1b_with_public-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-020d6991c57fb55a4",
            "route_table_id": "rtb-04ce4808642056248",
            "subnet_id": "subnet-04e23b51e3f099ef8"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_route_table.public-RT",
            "module.vpc.aws_subnet.pub_sub_1b",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pri_sub_1st",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:339712788790:subnet/subnet-07d3fc594e56bc7fb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07d3fc594e56bc7fb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "339712788790",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "name": "pri_sub_1st"
            },
            "tags_all": {
              "name": "pri_sub_1st"
            },
            "vpc_id": "vpc-0292d1de4d641b202"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pri_sub_2nd",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:339712788790:subnet/subnet-036dd5f376595b3ab",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-036dd5f376595b3ab",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "339712788790",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "name": "pri_sub_2nd"
            },
            "tags_all": {
              "name": "pri_sub_2nd"
            },
            "vpc_id": "vpc-0292d1de4d641b202"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_sub_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:339712788790:subnet/subnet-08c05f46babdbcb5f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08c05f46babdbcb5f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "339712788790",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "MREN-app-public-sub"
            },
            "tags_all": {
              "Name": "MREN-app-public-sub"
            },
            "vpc_id": "vpc-0292d1de4d641b202"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_sub_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:339712788790:subnet/subnet-04e23b51e3f099ef8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04e23b51e3f099ef8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "339712788790",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "name": "pub_sub_2nd"
            },
            "tags_all": {
              "name": "pub_sub_2nd"
            },
            "vpc_id": "vpc-0292d1de4d641b202"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:339712788790:vpc/vpc-0292d1de4d641b202",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-056099f276ef3eb60",
            "default_route_table_id": "rtb-0b6bb4b0405b9284d",
            "default_security_group_id": "sg-07a8d4babbe090ad5",
            "dhcp_options_id": "dopt-09dade24f91ffbe38",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0292d1de4d641b202",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b6bb4b0405b9284d",
            "owner_id": "339712788790",
            "tags": {
              "Name": "MREN-app-vpc"
            },
            "tags_all": {
              "Name": "MREN-app-vpc"
            }
          }
        }
      ]
    }
  ]
}